.metadata/.plugins/org.eclipse.cdt.ui/Midterm_Project.build.log
21:24:04 **** Incremental Build of configuration Debug for project Midterm_Project ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Main.o" "..\\src\\Main.cpp" 
..\src\Main.cpp: In function 'int main()':
..\src\Main.cpp:45:37: error: incompatible types in assignment of 'char**' to 'char* [(((ssizetype)para_size) + 1)]'
    paragraph = resizeArray(paragraph);
                                     ^

21:24:06 Build Failed. 1 errors, 0 warnings. (took 1s.295ms)

